// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButtons /> renders all buttons 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <Connect(LoginSocialButton)
    justifyContent="center"
    type="franceConnect"
  />
  <Connect(LoginSocialButton)
    key="0"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <Connect(LoginSocialButton)
    text="Cap Collectif CAS Provider"
    type="cas"
  />
  <Connect(LoginSocialButton)
    type="saml"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders nothing 1`] = `""`;

exports[`<LoginSocialButtons /> renders only CAS button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <Connect(LoginSocialButton)
    text="Cap Collectif CAS Provider"
    type="cas"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only Facebook button 1`] = `""`;

exports[`<LoginSocialButtons /> renders only FranceConnect button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <Connect(LoginSocialButton)
    justifyContent="center"
    type="franceConnect"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only OpenID button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <Connect(LoginSocialButton)
    key="0"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only SAML button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <Connect(LoginSocialButton)
    type="saml"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders without OR separator 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <Connect(LoginSocialButton)
    justifyContent="center"
    type="franceConnect"
  />
  <Connect(LoginSocialButton)
    key="0"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <Connect(LoginSocialButton)
    text="Cap Collectif CAS Provider"
    type="cas"
  />
  <Connect(LoginSocialButton)
    type="saml"
  />
</Fragment>
`;
